--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
 		<p style= "color:rgb(6, 189, 22)"> Holi Dinner, on 7th March, From 7:00 To 8:00 PM </p>
 
 
-
-        <img class="NO-CACHE" data-src="img/Shiva.png" width="374px" heigt="257px" alt="" style="margin-bottom: 22px;">
-		<p style="color: rgb(246, 72, 34)"><b>  Sahastradhara Abhishek, 13 August 2023 & Independence Day, 15 August 2023   </b></p>
-		 <p style="color: red">Next Meeting date not decided yet.</p> 
+	 <p style="color: red">Next Meeting date not decided yet.</p> 
 	-->
+        <img class="NO-CACHE" data-src="img/JA.jpg" width="288px" heigt="512px" alt="" style="margin-bottom: 22px;">
+		<p style="color: rgb(246, 72, 34)"><b>  Krishna Janmashtami, 07 September 2023   </b></p>
+	
 		<section class="our_activity">
 			<div class="container">
 				<div class="row">
