--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
         </div>-->
         
        <!-- <img class="NO-CACHE" data-src="img/WaterTiming.jpg" alt="" style="margin-bottom: 22px;">-->
-	   <!--
+	   
 	   <marquee  scrollamount="5" style= "color:rgb(5, 97, 27) ; font-size:20px" height="30px" > 
-		<p> Event: Upcoming event, Van mahotsav: Tree plantation in Shubh Villa on 9th July 2023 </p>
+		<p> Upcoming Event: Krishna Janmashtami, 07 September 2023, Ganesh Chaturthi, 19 September 2023 </p>
    </marquee>
-   	 -->
+  
 
     <!--
    <marquee behavior="slide" direction="left">
@@ -129,7 +129,11 @@
 	-->
         <img class="NO-CACHE" data-src="img/JA.jpg" width="288px" heigt="512px" alt="" style="margin-bottom: 22px;">
 		<p style="color: rgb(246, 72, 34)"><b>  Krishna Janmashtami, 07 September 2023   </b></p>
-	
+	<br>
+
+		<img class="NO-CACHE" data-src="img/GC.jpg" width="288px" heigt="512px" alt="" style="margin-bottom: 22px;">
+		<p style="color: rgb(246, 72, 34)"><b>  Ganesh Chaturthi, 19 September 2023   </b></p>
+		
 		<section class="our_activity">
 			<div class="container">
 				<div class="row">
