--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									<li><a href="MonthlyActivityFund.html">Society Activity Fund</a></li>
 									<li><a href="MonthlyMaintenance.html">Monthly Maintenance</a></li>
 									<li><a href="MonthlyCreditDebit.html">Collection/Expenditure</a></li>
-									<!--<li><a href="OneTimeCollection.html">One Time Collection</a></li>-->
+									<li><a href="OtherActivity.html">Other Activity</a></li>
 									<li><a href="MeetingHistory.html">Meeting History</a></li>
 									<!--<li><a href="VisitorDetails.html">Visitor Details</a></li>-->
 									<!--<li><a href="OCDinner.html">OC Status</a></li>-->
