--- a/OtherActivity.html
+++ b/OtherActivity.html
@@ -69,8 +69,8 @@
         </form>
     </div>
 
-   <!-- <p style="color: rgb(72, 160, 5)"> Final Balnace at Villa -10, 3204 </p>
-    -->
+    <p style="color: rgb(72, 160, 5)"> Final Balnace at Villa -10, 3204 </p>
+    
 <br>
 
     <p> Shiv Ji Abhishek 2023 - Collection</p>
