--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -63,9 +63,9 @@
             <form id="contact" action="" method="post">
                 <h3 style="color:darkgreen"> Monthly Maintenance Fund  </h3>
                 <br>
-                <h4 style="color:darkgreen">  Monthly Maintenance Details (1000 per month from each villa)</h4>
+                <h4 style="color:darkgreen">  Monthly Maintenance Details (1000 per month till Jun and from July 2000 from each villa)</h4>
                 <!--<h4 style="color:darkgreen">  Account: ########### , IFSC Code: $$$$$$$$$$ </h4>-->
-                <h4 style="color:darkgreen">  Cash Amount at Villa No. 45 </h4>
+                <h4 style="color:darkgreen">  Cash / Online Amount to Pankaj Ji Shubh Villa </h4>
                 <br>
                 <h4 style="color:darkgreen">  Jan-Feb-Mar 2023 Balance = 1,29,000  </h4>
                 <a class="image-link" href="img/Recipt_JanToMar.jpg"><img src="img/ClickHere.jpg"></a>
@@ -103,6 +103,12 @@
 		<th>Apr</th>
 		<th>May</th>
 		<th>Jun</th>
+		<th>Jul</th>
+		<th>Aug</th>
+		<th>Sep</th>
+		<th>Oct</th>
+		<th>Nov</th>
+		<th>Dec</th>
 	</thead>
 	<tbody></tbody>
 	</table>
@@ -143,106 +149,111 @@
 
 	function getYear2023(){
 	 var list = [];
-  list.push("	Villa-1	,,,,,,,");
-  list.push("	Villa-2	,,,,,,,");
-  list.push("	Villa-3	,,,,,,,");
-  list.push("	Villa-4	,Bhupesh Saini,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-5	,Shishir Maltiyar,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-6	,,,,,,,");
-  list.push("	Villa-7	,Rahul Pandey,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-8	,Anil Sharma,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-9	,Raghvendra Sharma,1000,1000,1000,,,");
-  list.push("	Villa-10	,Jogendra Sachdeva,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-11	,Sundeep Mahala,1000,1000,1000,,,");
-  list.push("	Villa-12	,Gaurav Kothari,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-13	,Anil Sharma,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-14	,R K Shandilya,1000,1000,1000,,,");
-  list.push("	Villa-15	,,,,,,,");
-  list.push("	Villa-16	,,,,,,,");
-  list.push("	Villa-17	,,,,,,,");
-  list.push("	Villa-18	,,,,,,,");
-  list.push("	Villa-19	,Hitesh Ji,1000,1000,1000,,,");
-  list.push("	Villa-20	,Ved Prakash Parashar,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-21	,,,,,,,");
-  list.push("	Villa-22	,,,,,,,");
-  list.push("	Villa-23	,,,,,,,");
-  list.push("	Villa-24	,Abhimanyu Saraswat,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-25	,,,,,,,");
-  list.push("	Villa-26	,Rakesh Kumar,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-27	,Deepesh Sharma,1000,1000,1000,,,");
-  list.push("	Villa-28	,Mohit Juneja,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-29	,,,,,,,");
-  list.push("	Villa-30	,,,,,,,");
-  list.push("	Villa-31	,,,,,,,");
-  list.push("	Villa-32	,Peeyush Verma,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-33	,Prakash Joshi,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-34	,Vijay Meena,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-35	,,,,,,,");
-  list.push("	Villa-36	,,,,,,,");
-  list.push("	Villa-37	,Gajendra Sharma,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-38	,,,,,,,");
-  list.push("	Villa-39	,Manish Salvi,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-40	,,,,,,,");
-  list.push("	Villa-41	,,,,,,,");
-  list.push("	Villa-42	,Prakash Ji,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-43	,Arun Tripathi,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-44	,Ravindra Verma,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-45	,Nand Singh Rajawat,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-46	,Vikas Mahala,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-47	,Manoj Ji,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-48	,R C Sharma,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-49	,,,,,,,");
-  list.push("	Villa-50	,Abhishek Garg,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-51	,Jatin Kumar,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-52	,Shailesh Bansal,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-53	,Rohit Jain,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-54	,,,,,,,");
-  list.push("	Villa-55	,,,,,,,");
-  list.push("	Villa-56	,,,,,,,");
-  list.push("	Villa-57	,,,,,,,");
-  list.push("	Villa-58	,,,,,,,");
-  list.push("	Villa-59	,,,,,,,");
-  list.push("	Villa-60	,,,,,,,");
-  list.push("	Villa-61	,,,,,,,");
-  list.push("	Villa-62	,Lal Singh,0,0,0,1000,1000,1000");
-  list.push("	Villa-63	,Yogesh Ji,,,,,,");
-  list.push("	Villa-64	,Sahil Meghnani,,,,,,");
-  list.push("	Villa-65	,Jalaj Rajpurohit,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-66	,,,,,,,");
-  list.push("	Villa-67	,Abhishek Jaiman,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-68	,Shrish Jaiman,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-69	,Piyush Sharma,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-70	,Vineet Sharma,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-71	,Suresh kumar Sharma,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-72	,Nikesh Chaudhary,1000,1000,1000,,,");
-  list.push("	Villa-73	,Richa Sharma,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-74	,,,,,,,");
-  list.push("	Villa-75	,,,,,,,");
-  list.push("	Villa-76	,S N Nagal,1000,1000,1000,,,");
-  list.push("	Villa-77	,,,,,,,");
-  list.push("	Villa-78	,,,,,,,");
-  list.push("	Villa-79	,,,,,,,");
-  list.push("	Villa-80	,,,,,,,");
-  list.push("	Villa-81	,,,,,,,");
-  list.push("	Villa-82	,,,,,,,");
-  list.push("	Villa-83	,,,,,,,");
-  list.push("	Villa-84	,,,,,,,");
-  list.push("	Villa-85	,Pradeep Verma,1000,1000,1000,,,");
-  list.push("	Villa-86	,Surendra Agrawal,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-87	,Devendra Singh,,,,,,");
-  list.push("	Villa-88	,Pankaj Chauhan,1000,1000,1000,1000,1000,1000");
-  list.push("	Villa-89	,,,,,,,");
-  list.push("	Villa-90	,,,,,,,");
-  list.push("	Villa-91	,,,,,,,");
-  list.push("	Villa-92	,,,,,,,");
-  list.push("	Villa-93	,,,,,,,");
-  list.push("	Villa-94	,,,,,,,");
-  list.push("	Villa-95	,,,,,,,");
-  list.push("	Villa-96	,,,,,,,");
-  list.push("	Villa-97	,,,,,,,");
-  list.push("	Villa-98	,,,,,,,");
-  list.push("	Villa-99	,,,,,,,");
-  list.push("	Villa-100	,,,,,,,");
+  list.push("	P1-Villa-1	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-2	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-3	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-4	,Bhupesh Saini,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-5	,Shishir Maltiyar,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-6	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-7	,Rahul Pandey,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-8	,Anil Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-9	,Raghvendra Sharma,1000,1000,1000,,,,,,,,,");
+  list.push("	P1-Villa-10	,Jogendra Sachdeva,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-11	,Sundeep Mahala,1000,1000,1000,,,,,,,,,");
+  list.push("	P1-Villa-12	,Gaurav Kothari,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-13	,Anil Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-14	,R K Shandilya,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-15	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-16	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-17	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-18	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-19	,Hitesh Ji,1000,1000,1000,,,,,,,,,");
+  list.push("	P1-Villa-20	,Ved Prakash Parashar,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-21	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-22	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-23	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-24	,Abhimanyu Saraswat,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-25	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-26	,Rakesh Kumar,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-27	,Deepesh Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-28	,Mohit Juneja,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-29	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-30	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-31	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-32	,Peeyush Verma,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-33	,Prakash Joshi,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-34	,Vijay Meena,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-35	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-36	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-37	,Gajendra Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-38	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-39	,Manish Salvi,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-40	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-41	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-42	,Prakash Ji,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-43	,Arun Tripathi,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-44	,Ravindra Verma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-45	,Nand Singh Rajawat,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-46	,Vikas Mahala,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-47	,Manoj Ji,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-48	,R C Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-49	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-50	,Abhishek Garg,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-51	,Jatin Kumar,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-52	,Shailesh Bansal,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-53	,Rohit Jain,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-54	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-55	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-56	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-57	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-58	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-59	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-60	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-61	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-62	,Lal Singh,0,0,0,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-63	,Yogesh Ji,,,,,,,,,,,,");
+  list.push("	P1-Villa-64	,Sahil Meghnani,,,,,,,,,,,,");
+  list.push("	P1-Villa-65	,Jalaj Rajpurohit,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-66	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-67	,Abhishek Jaiman,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-68	,Shrish Jaiman,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-69	,Piyush Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-70	,Vineet Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-71	,Suresh kumar Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-72	,Nikesh Chaudhary,1000,1000,1000,,,,,,,,,");
+  list.push("	P1-Villa-73	,Richa Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-74	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-75	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-76	,S N Nagal,1000,1000,1000,,,,,,,,,");
+  list.push("	P1-Villa-77	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-78	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-79	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-80	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-81	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-82	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-83	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-84	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-85	,Pradeep Verma,1000,1000,1000,,,,,,,,,");
+  list.push("	P1-Villa-86	,Surendra Agrawal,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-87	,Devendra Singh,,,,,,,,,,,,");
+  list.push("	P1-Villa-88	,Pankaj Chauhan,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-89	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-90	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-91	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-92	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-93	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-94	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-95	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-96	,,,,,,,,,,,,,");
+  list.push("	P1-Villa-97	,,,,,,,,,,,,,");
+  list.push("	P2-Villa-01	,Mayank Goyal,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-03	,Himmat Singh,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-04	,Meghraj Khandelwal,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-08	,Raj Kumar Sharma,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-09	,Raj Kumar Sharma,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-27	,Yogesh Sharma,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-73	,Yogesh Lakhera,,,,,,,2000,2000,2000,,,");
+  
 
 
 	 generateTable(list)
@@ -254,7 +265,7 @@ function generateTable(list){
 	var count =1;
 	$(list).each(function(){
 		var val = this.split(",");
-		var tr="<tr><td>"+count+" </td><td>"+val[0]+"</td><td>"+val[1]+"</td><td>"+val[2]+"</td><td>"+val[3]+"</td><td>"+val[4]+"</td><td>"+val[5]+"</td><td>"+val[6]+"</td><td>"+val[7]+"</td></tr>";
+		var tr="<tr><td>"+count+" </td><td>"+val[0]+"</td><td>"+val[1]+"</td><td>"+val[2]+"</td><td>"+val[3]+"</td><td>"+val[4]+"</td><td>"+val[5]+"</td><td>"+val[6]+"</td><td>"+val[7]+"</td><td>"+val[8]+"</td><td>"+val[9]+"</td><td>"+val[10]+"</td><td>"+val[11]+"</td><td>"+val[12]+"</td><td>"+val[13]+"</td></tr>";
 		$("#displayTableDetails").append(tr);
 		count++;
 	});
