--- a/MonthlyMaintenance.html
+++ b/MonthlyMaintenance.html
@@ -212,19 +212,19 @@
   list.push("	P1-Villa-62	,Lal Singh,0,0,0,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-63	,Yogesh Gupta,,,,,,,,,,,,");
   list.push("	P1-Villa-64	,Sahil Meghnani,,,,,,,,,,,,");
-  list.push("	P1-Villa-65	,Jalaj Rajpurohit,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-65	,Jalaj Rajpurohit,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-66	,Manju Gehlot,,,,,,,,,,,,");
-  list.push("	P1-Villa-67	,Abhishek Jaiman,1000,1000,1000,1000,1000,1000,,,,,,");
-  list.push("	P1-Villa-68	,Shrish Jaiman,1000,1000,1000,1000,1000,1000,,,,,,");
-  list.push("	P1-Villa-69	,Piyush Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
-  list.push("	P1-Villa-70	,Vineet Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
-  list.push("	P1-Villa-71	,Suresh kumar Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-67	,Abhishek Jaiman,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-68	,Shrish Jaiman,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-69	,Piyush Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-70	,Vineet Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
+  list.push("	P1-Villa-71	,Suresh kumar Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-72	,Nikesh Chaudhary,1000,1000,1000,,,,,,,,,");
-  list.push("	P1-Villa-73	,Richa Sharma,1000,1000,1000,1000,1000,1000,,,,,,");
+  list.push("	P1-Villa-73	,Richa Sharma,1000,1000,1000,1000,1000,1000,2000,2000,2000,,,");
   list.push("	P1-Villa-74	,Praveen Prajapat,,,,,,,,,,,,");
   list.push("	P1-Villa-75	,Archna Goswami,,,,,,,,,,,,");
-  list.push("	P1-Villa-76	,S N Nagal,1000,1000,1000,,,,,,,,,");
-  list.push("	P1-Villa-77	,Devki Nandan Mathuriya,,,,,,,,,,,,");
+  list.push("	P1-Villa-76	,S N Nagal,1000,1000,1000,,,,2000,2000,2000,,,");
+  list.push("	P1-Villa-77	,Devki Nandan Mathuriya,,,,,,,2000,2000,2000,,,");
   list.push("	P1-Villa-78	,Akshat Mangal,,,,,,,,,,,,");
   list.push("	P1-Villa-79	,Rahul Peswani,,,,,,,,,,,,");
   list.push("	P1-Villa-80	,Rahul Peswani,,,,,,,,,,,,");
@@ -248,12 +248,15 @@
   list.push("	P2-Villa-01	,Mayank Goyal,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-03	,Himmat Singh,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-04	,Meghraj Khandelwal,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-06	,Monika	Kheswani,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-08	,Raj Kumar Sharma,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-09	,Raj Kumar Sharma,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-16	,Seema	Asawat,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-31	,Navdeep Kumar,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-27	,Yogesh Kumar Choudhary,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-71	,Pretty	Roy,,,,,,,2000,2000,2000,,,");
+  list.push("	P2-Villa-72	,Hari Om Meena,,,,,,,2000,2000,2000,,,");
   list.push("	P2-Villa-73	,Yogesh Lakhera,,,,,,,2000,2000,2000,,,");
-  
-
 
 	 generateTable(list)
 	}
